-Updates PLIST key for Support URL

--- a/Blank Theme.rapidweavertheme/Contents/Theme.plist
+++ b/Blank Theme.rapidweavertheme/Contents/Theme.plist
@@ -246,7 +246,7 @@
 	<string>My Theme</string>
 	<key>RWThemeShortName</key>
 	<string>mytheme</string>
-	<key>RWAddonSupportURLString</key>
+	<key>RWAddonSupportURL</key>
 	<string>http://www.website.com</string>
 	<key>RWVersion</key>
 	<integer>1</integer>
