Corrects the file extension being included. It should not be included otherwise no Retina

--- a/Blank Theme.rapidweavertheme/Contents/Info.plist
+++ b/Blank Theme.rapidweavertheme/Contents/Info.plist
@@ -5,7 +5,7 @@
 	<key>RWAddonAuthor</key>
 	<string>Realmac Software</string>
 	<key>RWAddonManagerIconAsset</key>
-	<string>addonIcon.png</string>
+	<string>addonIcon</string>
 	<key>RWAddonSupportURL</key>
 	<string>http://help.realmacsoftware.com</string>
 </dict>
