Beginning to update the SDK Docs

--- a/Theme Samples/Blank Theme.rapidweavertheme/Contents/Info.plist
+++ b/Theme Samples/Blank Theme.rapidweavertheme/Contents/Info.plist
@@ -8,5 +8,7 @@
 	<string>addonIcon</string>
 	<key>RWAddonSupportURL</key>
 	<string>http://help.realmacsoftware.com</string>
+    <key>RWThemeIsResponsive</key>
+    <true/>
 </dict>
 </plist>
